# noxus-lab

./: .commit-msg.tmp  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  ruff.toml
.github/: CODEOWNERS  CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/agents/: Explore.agent.md  Refactor.agent.md  Release.agent.md
.github/workflows/: ci.yml  dependabot-automerge.yml  publish.yml  release.yml
docs/: cli.md  codegen.md  concepts.md  contributing.md  for-builders.md  for-users.md  mcp.md  philosophy.md  publish.md  quickstart.md  security.md
examples/: 01_hello.py  02_run.py  03_kb.py  04_agent.py  05_async.py  06_introspect.py  07_pull_demo.py  08_chat.py
noxuslab/: __init__.py  __main__.py  _audit.py  _net.py  _secrets.py  _term.py  _trace.py  _workflow.py  agent_codegen.py  chat.py  classify.py  cli.py  codegen.py  doctor.py  envs.py  errors.py  fmt.py  gen.py  graph.py  mcp.py  portal.py  runner.py  testing.py  trace_view.py  watch.py
noxuslab/helpers/: client.py  workflow.py
noxuslab/templates/multi_process/: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md.tpl  README.md.tpl  conftest.py  pyproject.toml.tpl  pyrightconfig.json  pyrightconfig.json.tpl  ruff.toml
noxuslab/templates/multi_process/_process_template/: README.md  __init__.py  classifier.py  labels.py
noxuslab/templates/multi_process/_workspace_template/: README.md  __init__.py  classifier.py  labels.py
noxuslab/templates/multi_process/docs/: adding_a_process.md  adding_a_workspace.md  architecture.md  environments.md  open_questions.md
noxuslab/templates/multi_process/processes/: __init__.py
noxuslab/templates/multi_process/scripts/: deploy.py.tpl
noxuslab/templates/multi_process/shared/: __init__.py  (+2 more)
tests/: conftest.py  test_agents.py  test_audit.py  test_chat.py  test_classify.py  test_cli.py  test_codegen.py  test_codegen_property.py  test_dx.py  test_examples_smoke.py  test_features.py  test_fmt_portal.py  test_godlike.py  test_mcp.py  test_net.py  test_run_trace_env_doctor.py  test_secrets.py  test_workflow_primitive.py
(+27 files in other folders)
