[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "noxuslab"
version = "0.14.0"
description = "A terse sandbox and CLI for the Noxus AI Python SDK."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Luís Tunes", email = "luis.tunes@advanceworks.ai" }]
keywords = ["noxus", "ai", "sdk", "workflow", "agent", "knowledge-base"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "noxus-sdk>=0.5.0",
  "python-dotenv>=1.0.0",
  "openai>=1.40.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "pre-commit>=3.7.0",
  "pyright>=1.1.380",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-mock>=3.12",
  "hypothesis>=6.100",
  "mcp>=1.0",
]
mcp = [
  "mcp>=1.0",
]

[project.scripts]
noxuslab = "noxuslab.cli:main"

[project.urls]
Homepage = "https://github.com/AdvanceWorks/noxus-lab"
Repository = "https://github.com/AdvanceWorks/noxus-lab"
Issues = "https://github.com/AdvanceWorks/noxus-lab/issues"

[tool.hatch.build.targets.wheel]
packages = ["noxuslab"]

[tool.hatch.build.targets.wheel.force-include]
"noxuslab/templates" = "noxuslab/templates"

[tool.hatch.build.targets.sdist]
include = [
  "noxuslab/**",
  "examples/**",
  "tests/**",
  "docs/**",
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
  "SECURITY.md",
  "AGENTS.md",
  "pyproject.toml",
  "ruff.toml",
  "pyrightconfig.json",
  ".env.example",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "-q",
  "--strict-markers",
  "--strict-config",
  "--cov=noxuslab",
  "--cov-report=term-missing",
  "--cov-fail-under=70",
]
testpaths = ["tests"]
markers = [
  "smoke: hits the live Noxus backend (requires NOXUS_API_KEY)",
]

[tool.coverage.run]
source = ["noxuslab"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
